2004-05-04	blytkerchan
debug session
	* binomial_tree.c: include binary.h
	(binomial_tree_node_get_left): add missing semicolon
	(binomial_tree_node_select): set K after the label
	don't use K when setting n
	take right branch when r == F
	(binomial_tree_node_foreach): don't forget to pass data to func
	(binomial_tree_node_foreach): release hazardous reference in register 1
	(binomial_tree_foreach): release hazardous reference to root
	* binomial_tree.h: include libcontain_config.h
	* map.c: whitespace change
	* TODO: update

implementing hazard pointers in the binomial tree
	* binomial_tree.c: include libmemory headers
	(binomial_tree_get_root): make a hazardous reference to the node before returning it
	(binomial_tree_node_get_left): ditto
	(binomial_tree_node_get_right): ditto
	(binomial_tree_node_get_parent): ditto
	(binomial_tree_node_register): implement
	(binomial_tree_node_release): ditto
	(binomial_tree_node_select): new function
	(binomial_tree_node_foreach): re-implement

2004-05-03	blytkerchan	debug session
	* array.c (array_get): use local nodes pointer in stead of the descriptor's nodes pointer
	return retval, not NULL
	* array.h: move the descriptive comment up
	include libcontain_config.h

2004-04-30	blytkerchan	repairing compilation :)
	* Makefile.am [SUBDIRS]: move libmemory before local
	[libcontain_la_LIBADD]: add libmemory
	* array.c: include increment.h and decrement.h from architecture-specific code
	(array_put): add missing semicolon
	(array_push_back): ditto
	(array_resize): use n_size in stead of size to allocate the new nodes
	remove unused variable exp
	cast n_size to pointer in compare_and_exchange call
	(array_copy): repair call to array_put
	(array_search): define size variable
	repaire type-o
	(array_deep_copy): define val variable
	repair call to array_put
	* configure.in: find pthread_setspecific function in pthread library

2004-04-29	blytkerchan	using libmemory in array implementation
	* how_arrays_work: new file